--- a/sass/css/_publications.scss
+++ b/sass/css/_publications.scss
@@ -41,17 +41,10 @@
   margin: 0;
 }
 
-
 .pub-item {
   margin-bottom: 1.5rem;
   padding-bottom: 1.5rem;
   border-bottom: 1px solid rgba(0,0,0,0.1);
-}
-
-.pub-item-last {
-  margin-bottom: 0;
-  padding-bottom: 0;
-  border-bottom: none;
 }
 
 .pub-type {
